# Qt-sample

./: .gitignore  CMakeLists.txt  README.en.md  README.md  qWidgetSample.pro
.github/workflows/: cmake.yml
BLE/: BLE.sln  BLE.vcxproj  CMakeLists.txt  ble.cpp  ble.h  ble.qrc  ble.sln  ble.ui  main.cpp
BLE/BLE/: ble.cpp  ble.pro
VLCplayer/: CMakeLists.txt  VLCplayer.pro  main.cpp  vlcplayer.cpp  vlcplayer.h  vlcplayer.ui
VLCplayer/sdk/: vlc.pri
VLCplayer/sdk/include/vlc/: vlc.h
VLCplayer/sdk/include/vlcpp/: Dialog.hpp  Equalizer.hpp  EventManager.hpp  Instance.hpp  Internal.hpp  Media.hpp  MediaDiscoverer.hpp  MediaLibrary.hpp  MediaList.hpp  MediaListPlayer.hpp  MediaPlayer.hpp  Picture.hpp  RendererDiscoverer.hpp  common.hpp  structures.hpp  vlc.hpp
components/: CMakeLists.txt
components/cmake/: NBCUiConfig.cmake.in
components/examples/: CMakeLists.txt  main.cpp
components/resource/: nbc.qrc
components/src/core/: drag-win-eventfilter.cpp  drag-win-eventfilter.h
components/src/global/: nbc.cpp  nbc.h
components/src/navigation/: navigation-panel.cpp  navigation-panel.h  navigation-widget.cpp  navigation-widget.h  navigation-widget_p.h
components/src/utils/: paint-utils.cpp  paint-utils.h
geoCoordinateEdit/: CMakeLists.txt  geocoordinateEdit.pro
geoCoordinateEdit/demo/: CMakeLists.txt  demo.pro  main.cpp  widget.ui
geoCoordinateEdit/plugin/: CMakeLists.txt  geocoordinateedit.cpp  geocoordinateedit.h  geocoordinateedit.pri  geocoordinateeditplugin.cpp  geocoordinateeditplugin.h  plugin.pro
listview-paint-btn/: CMakeLists.txt  listview.cpp  listview.h  listview.qrc  mainwindow.cpp  mainwindow.ui
notify/: CMakeLists.txt  formnotify.cpp  formnotify.h  formnotify.ui  main.cpp  notify.cpp  notify.h  notify.pro  notify_resource.qrc  notifymanager.cpp  notifymanager.h
spirality/: spirality.pro
spirality/app/: CMakeLists.txt  app.pro  interface.h  main.cpp  mainwindow.cpp  mainwindow.h  paintarea.cpp  paintarea.h
spirality/plugins/: CMakeLists.txt  plugins.pro
spirality/plugins/basictools/: CMakeLists.txt  basictools.cpp  basictools.h  basictools.pro
tests/: CMakeLists.txt
tests/auto/utils/: CMakeLists.txt  tst-chars-utils.cpp  tst-gui-utils.cpp
utils/: CMakeLists.txt  chars-utils.cpp  chars-utils.h  gui-utils.cpp  gui-utils.h
virtual-listview/: CMakeLists.txt  mainwindow.cpp
